# projeto_coracao

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  CMakeLists.txt.user.2da11ab  README.md  botao.cpp  botao.h  botao_.cpp  botao_.h  config.h  coracao.pro  frmcontribuicao.cpp  frmcontribuicao.ui  frmprincipal.cpp  frmprincipal.ui  inteface.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  morador.cpp.autosave  moradores.cpp  moradores.h  tela_contribuicao.cpp  tela_contribuicao.h  tela_contribuicao.ui  teste.h
config/: CMakeLists.txt  config.cpp  config.h  config.json
inteface/: .gitignore  botao.cpp  frmcontribuicao.h  frmprincipal.h  mainwindow.cpp  moradores.h
interface/: CMakeLists.txt  botao.cpp  botao.h  frmContribuicao.cpp  frmContribuicao.h  frmContribuicao.ui  frmNovoMorador.cpp  frmNovoMorador.h  frmNovoMorador.ui  frmPrincipal.cpp  frmPrincipal.h  frmPrincipal.ui  frmcontribuicao.cpp  frmcontribuicao.h  frmcontribuicao.ui  frmprincipal.cpp  frmprincipal.h  frmprincipal.ui  main.cpp  moradores.cpp  moradores.h  poliDialog.h  poliUiConstrutor.cpp  poliUiConstrutor.h  tplUiConstrutor.h  uiBotao.cpp  uiContas.cpp  uiContas.h  uiMoradores.cpp  uiMoradores.h  uiPolimorfico.cpp  uiPolimorfico.h  uimoradores.cpp  uimoradores.h  wgtBotao.cpp  wgtBotao.h  wgtCasa.cpp  wgtCasa.h  wgtConta.cpp  wgtConta.h  (+6 more)
logica/: CMakeLists.txt  logCasa.cpp  logCasa.h  logConta.cpp  logConta.h  logContribuicao.cpp  logContribuicao.h  logMorador.cpp  logMorador.h  poliUnidade.h  t2.cpp  t2.h
teste/: CMakeLists.txt  helloTest.cpp  testMorador.cpp
